--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <ul>
                 <li id="menu-toggle"><i id="menu-icon" class="fas fa-bars"></i></li>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="/Html/about.html">About</a></li>
-                <li><a href="/Html/contact.html">Contact</a></li>
-                <li><a href="/Html/login.html">Login</a></li>
-                <li><a href="/Html/signup.html">Sign Up</a></li>
+                <li><a href="Html/about.html">About</a></li>
+                <li><a href="Html/contact.html">Contact</a></li>
+                <li><a href="Html/login.html">Login</a></li>
+                <li><a href="Html/signup.html">Sign Up</a></li>
                 <li id="dark-mode-toggle"><a href="#"><i id="dark-mode-icon" class="fas fa-moon"></i></a></li>
             </ul>
         </nav>
