--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
     <div class="sidebar" id="sidebar">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="html/about.html">About Us</a></li>
-            <li><a href="Html/donkeychat.html">Chat</a></li>
-            <li><a href="Html/donkeychat.html">Contact Us</a></li>
-            <li><a href="Html/login.html">Login</a></li>
-            <li><a href="Html/signup.html">Sign Up</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="donkeychat.html">Chat</a></li>
+            <li><a href="donkeychat.html">Contact Us</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
         </ul>
     </div>
     <section class="hero">
         <div class="hero-content">
             <h1>Welcome to DonkeyChat.ai</h1>
             <p>Your fun and friendly chatbot companion. Ask anything, the donkey will answer!</p>
-            <a href="Html/donkeychat.html" class="btn">Start Chatting</a>
+            <a href="donkeychat.html" class="btn">Start Chatting</a>
         </div>
     </section>
 
