--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <ul>
                 <li id="menu-toggle"><i id="menu-icon" class="fas fa-bars"></i></li>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Html/about.html">About</a></li>
-                <li><a href="Html/contact.html">Contact</a></li>
-                <li><a href="Html/login.html">Login</a></li>
-                <li><a href="Html/signup.html">Sign Up</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
                 <li id="dark-mode-toggle"><a href="#"><i id="dark-mode-icon" class="fas fa-moon"></i></a></li>
             </ul>
         </nav>
@@ -27,8 +27,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="donkeychat.html">Chat</a></li>
-            <li><a href="donkeychat.html">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="signup.html">Sign Up</a></li>
         </ul>
