--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
         <div class="container">
             <span class="logo">DonkeyChat.ai</span>
             <nav class="navbar-menu">
-                <a href="../index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
                 <a href="login.html">Login</a>
