--- a/about.html
+++ b/about.html
@@ -256,7 +256,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <ul class="navbar-menu">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="https://12mahboob.github.io/donkeychat.ai/index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <!-- <li><a href="donkeychat.html">Chat</a></li> -->
             <li><a href="contact.html">Contact</a></li>
