--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,7 @@
     <header class="navbar" data-scroll-section>
         <div>
             <ul class="navbar-menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="https://12mahboob.github.io/donkeychat.ai/index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
